# memgpt-service

./: .gitattributes  .gitignore  CHANGES.md  README.md  pyproject.toml
memgpt/: agent.py  config.py  embeddings.py  memory.py  openai_compat.py  openai_tools.py  persistence_manager.py  utils.py
memgpt/cli/: cli.py  cli_load.py
memgpt/connectors/: local.py
sidecar/: proxy_shim.py
tests/: test_cutoff_equivalence.py  test_openai_compat.py  test_recall_reference_repair.py
