[project]
name = "openclaw-memgpt-sidecar"
version = "1.0.0"
description = "MemGPT memory architecture as a Python sidecar for the openclaw-memgpt plugin. Includes Anthropic/Claude compatibility patches against the original MemGPT (Apache 2.0)."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.12"
# Original MemGPT authors (Packer et al., 2024) — architecture credit.
authors = [
    {name = "Charles Packer", email = "contact@charlespacker.com"},
    {name = "Vivian Fang", email = "hi@vivi.sh"},
    {name = "Sarah Wooders", email = "sarahwooders@gmail.com"},
    {name = "Shishir Patil", email = "shishirpatil@berkeley.edu"},
    {name = "Kevin Lin", email = "kevinlin@eecs.berkeley.edu"},
]
# Fork maintainer.
maintainers = [
    {name = "Altay Acar", email = "xltvyxltvy@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/xltvy/memgpt-service"
Repository = "https://github.com/xltvy/memgpt-service"
"Upstream MemGPT" = "https://github.com/letta-ai/letta"

[project.scripts]
memgpt = "memgpt.main:app"

[tool.poetry]
packages = [
    {include = "memgpt"}
]

[tool.poetry.dependencies]
typer = {extras = ["all"], version = "^0.9.0"}
questionary = "^2.0.1"
demjson3 = "^3.0.6"
numpy = "^1.26.1"
pytz = "^2023.3.post1"
faiss-cpu = "^1.7.4"
tiktoken = ">=0.5.1,<1.0.0"
pymupdf = "^1.23.5"
tqdm = "^4.66.1"
openai = ">=1.52.0,<3.0.0"
black = "^23.10.1"
pytest = "^7.4.3"
llama-index = "^0.14"
setuptools = ">=68.2.2,<90.0.0"
datasets = "^2.14.6"
prettytable = "^3.9.0"
pgvector = "^0.2.3"
psycopg = "^3.1.12"
psycopg-binary = "^3.1.12"
psycopg2-binary = "^2.9.9"
litellm = {version = "^1.50.0", extras = ["proxy"]}
llama-index-embeddings-huggingface = "^0.7.0"
llama-index-readers-web = "^0.6.0"
llama-index-readers-database = "^0.6.0"


[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
